bugfix data object includes

--- a/_dist/patterns/templates/blog.hbs/blog/index.html
+++ b/_dist/patterns/templates/blog.hbs/blog/index.html
@@ -43,7 +43,7 @@
 <!-- End .header -->
 
 	<div role="main">
-		<h1 class="section-title">Our Outdoor Blog</h1>
+		<h1 class="section-title">Test Template</h1>
 		<div class="l-two-col">
 			<div class="l-main">
 				<section class="section latest-posts">
@@ -142,6 +142,7 @@
 </footer>
 <!-- End Footer -->
 </div>
+
 
     <script type="text/html" id="sg-pattern-html">  </script>
     <script type="text/html" id="sg-pattern-css">  </script>
