--- a/patterns/templates/blog.hbs
+++ b/patterns/templates/blog.hbs
@@ -1,7 +1,7 @@
 <div class="page" id="page">
 	{{ organism 'header' }}
 	<div role="main">
-		<h1 class="section-title">Our Outdoor Blog</h1>
+		<h1 class="section-title">Test Template</h1>
 		<div class="l-two-col">
 			<div class="l-main">
 				{{ organism 'latest-posts' }}
