--- a/patterns/pages/blog.hbs
+++ b/patterns/pages/blog.hbs
@@ -11,7 +11,7 @@
 							<li>{{ molecule 'media-block' }}</li>
 						{{/each}}
 					</ul>
-					<a href="#" class="text-btn">{{ button-label }}</a>
+					<a href="#" class="text-btn btn">{{ button-label }}</a>
 				</section>
 				{{ molecule 'pagination' }}
 			</div><!--end l-main-->
