--- a/patterns/pages/index.hbs
+++ b/patterns/pages/index.hbs
@@ -1,25 +1,20 @@
-<div class="page" id="page">
-	{{ organism 'header' }}
-	<div role="main">
-		<h1 class="section-title">Test Page</h1>
-		<div class="l-two-col">
-			<div class="l-main">
-				<section class="section latest-posts">
+<!-- Prebuild Content with Emmet -->
+header.header[role="banner"]+(nav.nav[role="navigation"]>ul>li*5>a[href="#" title="Fill me for link No.$!"]{Navi0$})+(main.main[role="main"]>(ul.breadcrumbs>li[itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"]*3>a[title="Breadcrumb$" href="#" itemprop="url"]>span[itemprop="title"]{Breadcrumb$})+h1>lorem3)+aside.aside[role="complementary"]+footer.footer[role="contentinfo"]
 
-					<ul class="post-list">
-						{{#each blog.latest-posts}}
-							<li>{{ molecule 'media-block' }}</li>
-						{{/each}}
-					</ul>
-					<a href="#" class="text-btn btn">{{ button-label }}</a>
-				</section>
-				{{ molecule 'pagination' }}
-			</div><!--end l-main-->
-
-			<div class="l-sidebar">
-				{{ organism 'recent-tweets' }}
-			</div><!--end l-sidebar-->
-		</div><!--end two-col-->
-	</div><!--End role=main-->
-	{{ organism 'footer' }}
-</div>
+<!-- Get customized modernizr from http://modernizr.com/download/ -->
+<script src="vendor/modernizr.custom.67687.js"></script>
+<!-- adjust jQuery version for googleapis file -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="vendor/bower/jquery/dist/jquery.min.js"><\/script>')</script>
+<script src="js/app.js"></script>
+<!--<script src="js-min/app.pkgd.js"></script>-->
+<!-- Load Stylesheets asynchronous (lend from https://css-tricks.com/authoring-critical-fold-css/) -->
+<script>function loadCSS(e){var n=window.document.createElement("link"),t=window.document.getElementsByTagName("head")[0];n.rel="stylesheet",n.href=e,n.media="only x",t.parentNode.insertBefore(n,t),setTimeout(function(){n.media="all"},0)}loadCSS("css/app.css");/*loadCSS('css-min/app.css');*/</script>
+<noscript>
+  <link rel="stylesheet" href="css/app.css">
+  <!--<link rel="stylesheet" href="css-min/app.css">-->
+</noscript>
+<!-- searchAction for Google's Search Box in the SERPs. Change example.com and input's name. -->
+<script type="application/ld+json">{"@context": "http://schema.org","@type": "WebSite","url": "[http://www.example.com/]","potentialAction": {"@type": "SearchAction","target": "[http://example.com/search/?search_terms={search_terms}]", "query-input": "required name=search_terms"}}</script>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>(function(e,t,n,r,i,s,o){e["GoogleAnalyticsObject"]=i;e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},e[i].l=1*new Date;s=t.createElement(n),o=t.getElementsByTagName(n)[0];s.async=1;s.src=r;o.parentNode.insertBefore(s,o)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create","[UA-XXXXXXX-X]","auto");ga("set","anonymizeIp",true);ga('require', 'displayfeatures');ga("send","pageview")</script>
