--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-	{{> head}}
-	<body class="sg-single-pattern">
+{{> head}}
 
-		{{> body}}
+	{{> body}}
 
-	</body>
-</html>
+{{> foot}}
+
