--- a/patterns/pages/index.hbs
+++ b/patterns/pages/index.hbs
@@ -10,7 +10,7 @@ button-alert:
 ---
 
 <h1>{{ title }}</h1>
-<h2>Here comes a&hellip;</h2>
+<h2>Let's start with a&hellip; </h2>
 
 {{ atom "button" button }} 
 and a 
@@ -25,8 +25,7 @@ and a
 <!--<script src="js-min/app.pkgd.js"></script>-->
 <!-- Load Stylesheets asynchronous (lend from https://css-tricks.com/authoring-critical-fold-css/) -->
 <script>function loadCSS(e){var n=window.document.createElement("link"),t=window.document.getElementsByTagName("head")[0];n.rel="stylesheet",n.href=e,n.media="only x",t.parentNode.insertBefore(n,t),setTimeout(function(){n.media="all"},0)}loadCSS("css/app.css");/*loadCSS('css-min/app.css');*/</script>
-<noscript>
-  <link rel="stylesheet" href="css/app.css">
+<noscript> 
   <!--<link rel="stylesheet" href="css-min/app.css">-->
 </noscript>
 <!-- searchAction for Google's Search Box in the SERPs. Change example.com and input's name. -->
