--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,13 +12,13 @@
 @import "base";
 
 // Atoms
-@import "../patterns/atoms/buttons/scss/buttons";
+@import "../patterns/atoms/button/scss/button";
 
 // Molecules
-@import "../patterns/molecules/buttons/scss/example";
+//@import "../patterns/molecules/buttons/scss/example";
 
 // Organisms
-@import "../patterns/organisms/buttons/scss/";
+//@import "../patterns/organisms/buttons/scss/";
 
 // Pages
-@import "../patterns/pages/buttons/scss/example";
+//@import "../patterns/pages/buttons/scss/example";
