--- a/templates/includes/head.hbs
+++ b/templates/includes/head.hbs
@@ -39,6 +39,9 @@
 			/* Above-The-Fold-Styles go here */
 		</style>
 
+
+  	<link rel="stylesheet" href="./public/css/app.css">
+
 		<!-- If IE8 should be supported, anyway -->
 		<!--[if lt IE 9]>
 			<script src="vendor/html5shiv.min.js"></script>
