Clean up and optimize folder structure

--- a/templates/includes/head.hbs
+++ b/templates/includes/head.hbs
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-		<title itemprop="name">[Title 50-60 characters]</title>
+		<!-- [Title 50-60 characters] -->
+		<title itemprop="name">AssembleHTML</title>
 
 		<meta name="description" itemprop="description" content="[Roughly 155 Characters]">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
 		</style>
 
 
-  	<link rel="stylesheet" href="./public/css/app.css">
+  	<link rel="stylesheet" href="./assets/css/app.css">
 
 		<!-- If IE8 should be supported, anyway -->
 		<!--[if lt IE 9]>
