--- a/patterns/pages/index.hbs
+++ b/patterns/pages/index.hbs
@@ -1,6 +1,7 @@
 ---
 
 title: Welcome...
+secondHeadline: Let's start with a&hellip;  
 
 button:
  text: "&hellip;button"
@@ -9,8 +10,8 @@ button-alert:
 
 ---
 
-<h1>{{ title }}</h1>
-<h2>Let's start with a&hellip; </h2>
+<h1>{{{ title }}}</h1>
+<h2>{{{ secondHeadline }}}</h2>
 
 {{ atom "button" button }} 
 and a 
