--- a/templates/includes/head.hbs
+++ b/templates/includes/head.hbs
@@ -40,7 +40,7 @@
 		</style>
 
 
-  	<link rel="stylesheet" href="./assets/css/app.css">
+  	<link rel="stylesheet" href="{{{css-path}}}app.css">
 
 		<!-- If IE8 should be supported, anyway -->
 		<!--[if lt IE 9]>
