--- a/scss/app.scss
+++ b/scss/app.scss
@@ -15,7 +15,7 @@
 @import "../patterns/atoms/button/scss/button";
 
 // Molecules
-//@import "../patterns/molecules/buttons/scss/example";
+@import "../patterns/molecules/buttonLabel/scss/buttonLabel";
 
 // Organisms
 //@import "../patterns/organisms/buttons/scss/";
