--- a/patterns/atoms/button/scss/_button.scss
+++ b/patterns/atoms/button/scss/_button.scss
@@ -1,6 +1,7 @@
 .btn {
-	background: #ddd;
+	background: green;
+  color: #fff;
 	border: 0;
 	padding: 5px 10px;
-	border-radius: 2px; 
-} 
+	border-radius: 2px;
+}
