--- a/templates/styleguide/index.html
+++ b/templates/styleguide/index.html
@@ -9,55 +9,13 @@
     <meta name="description" itemprop="description" content="[Roughly 155 Characters]">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        body {
-            font: normal 1em/1.4 sans-serif;
-            color: #444;
-        }
-        iframe {
-            resize: both;
-            overflow: auto;
-            width: auto;
-            height: auto;
-            min-width: 320px;
-            background-color: #fff;
-            border: 1px dashed #ccc;
-        }
-        .navigation-wrapper {
-            padding: 10px;
-            border: 1px solid #ccc;
-        }
-        .navigation > li {
-            padding-bottom: 10px;
-        }
-        .navigation > li:last-child {
-            padding-bottom: 0;
-        }
-        .navigation, .navigation ul {
-            list-style: none;
-            padding-left: 15px;
-        }
-        .navigation a {
-            color: inherit;
-            text-decoration: none;
-        }
-        .navigation ul a:before {
-            content: '\02EA';
-            font-size: 1.2em;
-            position: relative;
-            top: -5px;
-            padding-right: 5px;
-        }
-        p {
-            font-size: 0.9em;
-        }
-    </style>
+    <link rel="stylesheet" href="styleguide.css">
   </head>
 
   <body>
 
 
-    <header>
+    <header id="top">
         <h1 class="js-title">Welcome to the&hellip;</h1>
         <p class="js-intro"></p>
     </header>
