--- a/templates/styleguide/index.html
+++ b/templates/styleguide/index.html
@@ -12,17 +12,18 @@
     <link rel="stylesheet" href="styleguide.css">
   </head>
 
-  <body>
+  <body class="styleguide-body">
 
 
-    <header class="header" id="top">
-        <h1 class="js-title">Welcome to the&hellip;</h1>
-        <p class="js-intro"></p>
+    <header class="styleguide-header" id="top">
+        <h1 class="styleguide-h1 js-title">Generating Styleguide&hellip;</h1>
+        <p class="styleguide-p js-intro"></p>
     </header>
-    <nav class="navigation-wrapper">
-        <ul class="navigation js-navigation"></ul>
+    <nav class="styleguide-navigation-wrapper">
+        <h2>Structure</h2>
+        <ul class="styleguide-navigation js-navigation"></ul>
     </nav>
-    <main class="main js-content">
+    <main class="styleguide-main js-content">
 
     </main>
 
