set up typo section

--- a/templates/styleguide/index.html
+++ b/templates/styleguide/index.html
@@ -20,7 +20,7 @@
         <p class="styleguide-p js-intro"></p>
     </header>
     <nav class="styleguide-navigation-wrapper">
-        <h2>Structure</h2>
+        <h2 class="styleguide-h2">Structure</h2>
         <ul class="styleguide-navigation js-navigation"></ul>
     </nav>
     <main class="styleguide-main js-content">
