bugfixing index.hbs

--- a/patterns/pages/index.hbs
+++ b/patterns/pages/index.hbs
@@ -25,7 +25,7 @@ button-label:
 and a
 {{ atom "button" button-alert }}
 <p>
-{{ molecule "buttonLabel" button-label }}
+{{ molecule "buttonlabel" button-label }}
 </p>
 
 <!-- Get customized modernizr from http://modernizr.com/download/ -->
