add susy grid example

--- a/patterns/pages/index.hbs
+++ b/patterns/pages/index.hbs
@@ -28,6 +28,8 @@ and a
 {{ molecule "buttonlabel" button-label }}
 </p>
 
+{{ organism "susy-grid-example" }}
+
 <!-- Get customized modernizr from http://modernizr.com/download/ -->
 <!--<script src="vendor/modernizr.custom.67687.js"></script>-->
 <!-- adjust jQuery version for googleapis file -->
