--- a/css/app.css
+++ b/css/app.css
@@ -496,67 +496,6 @@ th {
 * @author [XX]
 * @dependency _app_settingsscss
 */
-/* line 11, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
-.susy-grid-example {
-  max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  border: 1px solid #eee;
-}
-/* line 12, ../vendor/bower/susy/sass/susy/output/support/_clearfix.scss */
-.susy-grid-example:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 16, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
-.susy-grid-example--item {
-  width: 100%;
-  float: left;
-  margin-left: 0;
-  margin-right: 0;
-  min-height: 100px;
-  background: #fff;
-}
-@media (min-width: 480px) {
-  /* line 16, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
-  .susy-grid-example--item {
-    width: 23.72881%;
-    float: left;
-  }
-  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
-  .susy-grid-example--item:nth-child(4n + 1) {
-    margin-left: 0;
-    margin-right: -100%;
-    clear: both;
-    margin-left: 0;
-  }
-  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
-  .susy-grid-example--item:nth-child(4n + 2) {
-    margin-left: 25.42373%;
-    margin-right: -100%;
-    clear: none;
-  }
-  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
-  .susy-grid-example--item:nth-child(4n + 3) {
-    margin-left: 50.84746%;
-    margin-right: -100%;
-    clear: none;
-  }
-  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
-  .susy-grid-example--item:nth-child(4n + 4) {
-    margin-left: 76.27119%;
-    margin-right: -100%;
-    clear: none;
-  }
-}
-/* line 25, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
-.susy-grid-example--item > p {
-  background: #eee;
-  padding: 10px;
-}
-
 /* line 1, ../scss/_init.scss */
 .btn {
   background: green;
@@ -582,6 +521,67 @@ th {
   background-color: #eee;
   padding: 10px 20px;
   box-sizing: border-box;
+}
+
+/* line 9, ../scss/_init.scss */
+.susy-grid-example {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  border: 1px solid #eee;
+}
+/* line 12, ../vendor/bower/susy/sass/susy/output/support/_clearfix.scss */
+.susy-grid-example:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 34, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
+.susy-grid-example__item {
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+  min-height: 100px;
+  background: #fff;
+}
+@media (min-width: 480px) {
+  /* line 34, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
+  .susy-grid-example__item {
+    width: 23.72881%;
+    float: left;
+  }
+  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
+  .susy-grid-example__item:nth-child(4n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both;
+    margin-left: 0;
+  }
+  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
+  .susy-grid-example__item:nth-child(4n + 2) {
+    margin-left: 25.42373%;
+    margin-right: -100%;
+    clear: none;
+  }
+  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
+  .susy-grid-example__item:nth-child(4n + 3) {
+    margin-left: 50.84746%;
+    margin-right: -100%;
+    clear: none;
+  }
+  /* line 66, ../vendor/bower/susy/sass/susy/language/susy/_gallery.scss */
+  .susy-grid-example__item:nth-child(4n + 4) {
+    margin-left: 76.27119%;
+    margin-right: -100%;
+    clear: none;
+  }
+}
+/* line 43, ../patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss */
+.susy-grid-example__item > p {
+  background: #eee;
+  padding: 11.11111%;
 }
 
 /*# sourceMappingURL=app.css.map */
