--- a/patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss
+++ b/patterns/organisms/susy-grid-example/scss/_susy-grid-example.scss
@@ -1,19 +1,37 @@
-// Set global defaults for susy (http://susydocs.oddbird.net/en/latest/settings/):
+// Set global defaults for susy (http://susydocs.oddbird.net/en/latest/settings/, Tut. https://www.smashingmagazine.com/2015/07/smarter-grids-with-sass-and-susy/):
 $susy: (
-  container: 1280px,
+  flow: ltr,
+  math: fluid,
+  output: float,
+  gutter-position: after,
+  container: auto,
+  container-position: center,
   columns: 12,
   gutters: .25,
-  gutter-position: after,
-  math: fluid,
-  output: isolate
+  column-width: false,
+  global-box-sizing: content-box,
+  last-flow: to,
+  debug: (
+    image: hide,
+    color: rgba(#66f, .25),
+    output: background,
+    toggle: top right,
+  ),
+  use-custom: (
+    background-image: true,
+    background-options: false,
+    box-sizing: true,
+    clearfix: false,
+    rem: true,
+  )
 );
 
-.susy-grid-example {
+@mixin susy-grid-example() {
   @include container();
   position: relative;
   border: 1px solid #eee;
 
-  &--item {
+  &__item {
     @include span(12);
     min-height: 100px;
     background: #fff;
@@ -24,7 +42,7 @@ $susy: (
 
     > p {
       background: #eee;
-      padding: 10px;
+      padding: gutter(2);
     }
   }
 }
