--- a/patterns/organisms/susy-grid-example/susy-grid-example.hbs
+++ b/patterns/organisms/susy-grid-example/susy-grid-example.hbs
@@ -1,14 +1,14 @@
 <article class="susy-grid-example">
-  <div class="susy-grid-example--item">
+  <div class="susy-grid-example__item">
     <p>Lorem ipsum dolor.</p>
   </div>
-  <div class="susy-grid-example--item">
+  <div class="susy-grid-example__item">
     <p>Lorem ipsum dolor.</p>
   </div>
-  <div class="susy-grid-example--item">
+  <div class="susy-grid-example__item">
     <p>Lorem ipsum dolor.</p>
   </div>
-  <div class="susy-grid-example--item">
+  <div class="susy-grid-example__item">
     <p>Lorem ipsum dolor.</p>
   </div>
 </article>
