--- a/templates/styleguide/index.html
+++ b/templates/styleguide/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="styleguide.css">
+    <link rel="stylesheet" href="github.css">
   </head>
 
   <body class="styleguide-body">
@@ -32,6 +33,7 @@
     <script src="vendor/modernizr.custom.67687.js"></script>-->
     <!-- adjust jQuery version for googleapis file -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="highlight.pack.js"></script>
     <script src="styleguide.js"></script>
 
   </body>
